rgw: don't recalculate etags for slo/dlo

for slo, we've already calculated this as 'lo_etag' in get_params()
for dlo, the local 'etag' already contains the hash of an empty string

the calls to complete_etag() were calling hash.Final() a second time on
the same hash without a hash.Restart() in between. this apparently
worked fine with NSS, but with OpenSSL the second call to Final()
returns a different value

Fixes: https://tracker.ceph.com/issues/39160

Signed-off-by: Casey Bodley <cbodley@redhat.com>
(cherry picked from commit 4b849a49bd6c6b66f8185739ae21f0e6aa526a1a)